adjusted content and overflow to be right of it's label, fixed intro copy, fixed coloring in details section

--- a/crowdsourcing/custom_world_interactions/webapp/src/Views/Preview/styles.css
+++ b/crowdsourcing/custom_world_interactions/webapp/src/Views/Preview/styles.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     overflow-y: scroll;
     overflow-x: hidden;
-    align-items: center;
     padding-bottom: 5em;
 }
 
@@ -19,5 +18,5 @@
     font-weight: bold;
     color: white;
     text-align: center;
-    font-size: 8em;
+    font-size: 5em;
 }
