--- a/crowdsourcing/custom_world_interactions/webapp/src/components/ExampleCard/styles.css
+++ b/crowdsourcing/custom_world_interactions/webapp/src/components/ExampleCard/styles.css
@@ -21,6 +21,6 @@
 }
 
 .card-text {
-    font-size: 1em;
+    font-size: 18px;
     text-align: center;
 }
